--- a/templates/lights.html
+++ b/templates/lights.html
@@ -263,14 +263,14 @@ let blueSlider = noUiSlider.create(document.getElementById("blueSlider"),{
 
 // Speed Slider ---------------
 let speedSlider = noUiSlider.create(document.getElementById("speedSlider"),{
-	start: 30,
+	start: .30,
 	range: {'min':0, 'max':1},
 	connect: [true, false]
 });
 
 // Brightness Slider
 let brightnessSlider = noUiSlider.create(document.getElementById("brightnessSlider"),{
-	start: 75,
+	start: .75,
 	range: {'min':0, 'max':1},
 	connect: [true, false]
 });
@@ -324,15 +324,15 @@ function masterUpdateColor(color, from){
 
 	// Update the sliders
 	if (from != 'slider'){
-		split = color.substr(4).split(")")[0].split(',');
-		redSlider.set(split[0]*1);
-		greenSlider.set(split[1]*1);
-		blueSlider.set(split[2]*1);
+		vals = color.substr(4).split(")")[0].split(',');
+		redSlider.set(vals[0]*1);
+		greenSlider.set(vals[1]*1);
+		blueSlider.set(vals[2]*1);
 	}
 
 	// send the command to server----- parse the color
-	split = rgb.substr(4).split(")")[0].split(',');
-	sendCommand(`Color:[${r},${g},${b}]`);
+	vals = color.substr(4).split(")")[0].split(',');
+	sendCommand(`Color:[${vals[0]},${vals[1]},${vals[2]}]`);
 }
 
 function masterOff(){
